Remaining:
* Solve mysterious silent failure after days of running.
* Package the build properly for release on a Eclipse update site. Check into version management / auto-updates.

08/15/2012 - Fixed multi-module maven project path ambiguity. (v1.2.0)
 - SourceOpener now uses knowledge of which project the search result was found in, plus a project-relative
   path, to correctly open the file in the child's src folder instead of rooted at the parent. See issue #4.
   This also reduces (maybe eliminates) the possibility of multiple hits and the disambiguation UI dialog.

12/11/2011 - Fixed logging, fixed start listener on startup.
 - Moved open-file on open event out of the View and into plugin code, so it works without the view open.
 - Made listener properly listen and fire on startup, even before the view is first created.
 - Improved logging to begin debugging mysterious crashes. Renamed package.

12/01/2011 - Support for jsonp for use with the Chrome extension (v1.1.0), though it turned out to be unnecessary.
 - New url parameter jsonp=y to trigger output as javascript instead of html "OK"

10/29/2011 - Added dialog to ask user which file to open in case of multiple hits. (v1.0.0)
 - New multiple hits choice dialog
 - Drastically simplifed search match logic and error handling
 - General code cleanup
 - Added dispose() coverage for button images

10/23/2011 - Added preferences and automatic server restart on change.  Added password. 
 - Added preferences panel as plain text. Currently sets port number, password required, password text, # recent files to list.
 - Added "Clear" button to blank out the recent open events tab.
 - Discovered secure storage approach was failing, need to fix that later; using plain text for now because it's reliable.
 - Added preference setting for Start listener on startup.

10/22/2011 - Fixed event table display problems.
 - Cleaned up formatting of Recent File Locations tab using a table layout.