@@ -2,15 +2,14 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: sourceopener
 Bundle-SymbolicName: net.ftlines.wicketsource.sourceopener;singleton:=true
-Bundle-Version: 1.5.0.7
-Bundle-Activator: net.ftlines.wicketsource.sourceopener.Activator
+Bundle-Version: 7.4.0.1
+Bundle-Activator: com.github.jennybrown8.wicketsourceopener.Activator
 Require-Bundle: org.eclipse.ui,
  org.eclipse.core.runtime,
  org.eclipse.core.resources,
  org.eclipse.ui.ide;bundle-version="3.7.0"
 Bundle-ActivationPolicy: lazy
-Bundle-RequiredExecutionEnvironment: JavaSE-1.6,
- J2SE-1.5
+Bundle-RequiredExecutionEnvironment: JavaSE-1.8
 Import-Package: org.eclipse.debug.core.sourcelookup.containers,
  org.eclipse.equinox.security.storage,
  org.eclipse.jdt.core.search,
