@@ -12,3 +12,4 @@ bin.includes = plugin.xml,\
                .classpath
 src.includes = icons/,\
                contexts.xml
+jre.compilation.profile = JavaSE-1.8
