@@ -1,4 +1,4 @@
-package net.ftlines.wicketsource.sourceopener;
+package com.github.jennybrown8.wicketsourceopener;
 
 public interface IExceptionCallbackHandler {
 	public void onError(Exception e);
