@@ -1,10 +1,10 @@
-package net.ftlines.wicketsource.sourceopener;
+package com.github.jennybrown8.wicketsourceopener;
 
 import java.util.logging.Logger;
 
-import net.ftlines.wicketsource.sourceopener.preferences.PreferenceValueService;
-
 import org.eclipse.ui.IStartup;
+
+import com.github.jennybrown8.wicketsourceopener.preferences.PreferenceValueService;
 
 public class Startup implements IStartup {
 	Logger log = Logger.getLogger("Startup");
